debdelta (0.65) UNRELEASED; urgency=medium

  * Switch to dpkg-source 3.0 (native) format

 --

debdelta (0.64) unstable; urgency=medium

  * add new gnupg key
  * some patches debdeltas_server
  * uses Python3, this fixes "Python2 removal in sid/bullseye", thanks to Sandro Tosi
    (Closes: #945657)
  * python-poster is not used anymore (Closes: 700969)
  * error logs are not sent (Closes: 737810)
  * Fix FTCBFS: Use host tools. (Closes: 905754) Thanks Helmut Grohne <helmut@subdivi.de>

 -- A Mennucc1 <mennucc1@debian.org>  Fri, 13 Dec 2019 22:20:11 +0100

debdelta (0.62) unstable; urgency=medium

  * update Vcs-git to point to salsa

 -- A Mennucc1 <mennucc1@debian.org>  Wed, 06 Jun 2018 09:22:34 +0200

debdelta (0.61) unstable; urgency=medium

  * support for control.tar.xz
  * debdelta-upgrade: report if delta is queued in the server but not yet ready

 -- A Mennucc1 <mennucc1@debian.org>  Wed, 11 Apr 2018 10:56:36 +0200

debdelta (0.60) unstable; urgency=medium

  * better support for  httpredir.debian.org

 -- A Mennucc1 <mennucc1@debian.org>  Thu, 12 Oct 2017 12:41:46 +0200

debdelta (0.59) unstable; urgency=medium

  * really bump standards version to 3.9.8
  * correct typo in copyright
  * fix code for small debs, do not check for stamps
  * Bug fix: "local variable 'url' referenced before assignment",
    thanks to Steffen Weinhart, (Closes: #708022).
  * Add 'set -e' in debian/rules. Thanks Niels Thykier
  * correct wrong message 'No deb-policy "u" ....' Thanks Niels Thykier

 -- A Mennucc1 <mennucc1@debian.org>  Wed, 08 Feb 2017 11:28:50 +0100

debdelta (0.58exp) experimental; urgency=medium

  * Bug fix: "cannot handle redirects",
    thanks to Paul Wise (Closes: #835655).
  * Bug fix: "Portuguese translation not packaged",
    thanks to Carlos Maddela (Closes: #849908).
  * Bug fix: "[INTL:pt] Updated Portuguese translation for program",
    thanks to Miguel Figueiredo (Closes: #852087).
  * Installation leaves gpg-agent process running